Fixed comment layout issue

--- a/src/components/comments/Comments.module.css
+++ b/src/components/comments/Comments.module.css
@@ -1,10 +1,10 @@
 .comments {
   position: fixed;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   border-radius: 12px;
   top: 0;
@@ -14,17 +14,18 @@
   /* overflow-y: scroll; */
   box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.25);
   background-color: rgba(0, 0, 0, 0.05);
-  /* padding: 0 5px; */
+  padding: 35px 10px 66px 10px;
 }
 
 .headers {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   width: 100%;
   padding: 10px 20px 0 20px;
+  top: 0;
 }
 
 .title {
@@ -34,7 +35,7 @@
 
 .embed {
   position: relative;
-  display: block;
+  
   /* height: 500px !important; */
   box-shadow: unset;
   z-index: 10;
@@ -99,35 +100,34 @@
 .fields {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  left: inherit;
   width: 100%;
   height: auto;
   min-height: 66px;
-  background-color: #d9d9d9;
+  background-color: #fff;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 0 10px;
   z-index: 999;
-  border-radius: 12px;
+  border-top: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 .comment_inp {
   position: relative;
   display: block;
-  width: 88%;
-  background-color: #fff;
+  width: 90%;
+  background-color: transparent;
   color: #000;
   font-family: inherit;
-  border-radius: 100vw;
+  border-radius: 12px;
   outline: none;
   border: none;
   font-size: 12px;
-  height: 45px;
-  padding: 0 20px;
+  height: 40px;
+  padding: 0 10px;
 }
-
 @media screen and (max-width: 640px) {
   .comments {
     /* position: relative; */
@@ -145,15 +145,14 @@
     
   }
 
-  .embed {
+  /* .embed {
     position: relative;
     display: block;
-    /* height: 500px !important; */
     box-shadow: unset;
     z-index: 10;
     width: 100%;
     
-  }
+  } */
 
   .comment_screen {
     position: relative;
