--- a/src/components/comments/CommentsList.module.css
+++ b/src/components/comments/CommentsList.module.css
@@ -1,23 +1,30 @@
 .comment_screen {
-    position: absolute;
+    position: relative;
     display: block;
+    
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
     width: 100%;
-    height: 67vh;
+    height: 100%;
     /* border: 2px solid red; */
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: scroll !important;
+    
     margin-top: 20px;
     /* margin-top: 80px; */
+    transition: all 0.2s ease-out;
+    padding: 0 10px;
     
+    
+
     
 }
 
 .comment_screen::-webkit-scrollbar {
     position: absolute;
     width: 0.4em;
+    transition: all 0.2s ease-out;
 
 }
 
@@ -26,6 +33,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 100vw;
     margin-block: 10px;
+    transition: all 0.2s ease-out;
 
 
 }
@@ -34,17 +42,18 @@
     width: auto;
     border-radius: 100vw;
     background-color: rgba(0, 0, 0, 0.5);
+    transition: all 0.2s ease-out;
 }
 
 .hide_scroll::-webkit-scrollbar-track , .hide_scroll::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0);
+    transition: all 0.2s ease-out;
 }
 
-.list {
+/* .list {
     position: relative;
     display: flex;
     width: 100%;
-    min-height: 66vh;
     height: auto;
     flex-direction: column;
     align-items: center;
@@ -52,8 +61,8 @@
     padding: 0px 20px 0px 20px;
     margin-bottom: 0px;
     
-    /* background-color: cornflowerblue; */
-}
+
+} */
 
 .item {
     position: relative;
