--- a/src/components/task-page/TaskPage.module.css
+++ b/src/components/task-page/TaskPage.module.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   position: fixed;
   height: 100vh;
   top: 0;
